--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,8 @@ services:
 - type: pserv
   name: redis
   env: docker
+  region: frankfurt
   disk:
     name: data
     mountPath: /var/lib/redis
-    sizeGB: 10
+    sizeGB: 5
